Adding the twitter bot files

--- a/source/index.html
+++ b/source/index.html
@@ -4,4 +4,4 @@ title: Curriculum
 ---
 
 {% assign index = true %}
-{% section projects/week_one.markdown %}
+{% section projects/weekly_curriculum.markdown %}
